# $Id$

2008-03-27	Konstantin V. Arkhipov

	* main/Utils/HeaderUtils.class.php: redirect() removed, finally.

2008-02-18	Konstantin V. Arkhipov

	* core/Cache/WatermarkedPeer.class.php: further collisions prevention:
	onPHP's version now appends to watermark.

2007-10-30	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: class name collision
	detection added.

2007-09-19	Konstantin V. Arkhipov

	* main/DAOs/: uncaching fixed in dropByIds().

2007-07-23	Ivan Y. Khvostishkov

	* global.inc.php.tpl: possible security hole fixed on autoload's
	level.

2007-06-19	Konstantin V. Arkhipov

	* main/SPL/bundled/: removed, it was a bad idea.

2007-06-18	Konstantin V. Arkhipov

	* core/Form/MappedForm.class.php: now checks Form's rules upon
	import().

2007-06-02	Konstantin V. Arkhipov

	* 0.4.12 released.

2007-05-01	Sergey S. Sergeev

	* meta/builders/BaseBuilder.class.php: return query if setters are
	empty.

2007-04-22	Konstantin V. Arkhipov

	* trunk/core/OSQL/SelectQuery.class.php: getFieldNames() now respects
	aliases.

2007-03-20	Konstantin V. Arkhipov

	* main/Containers/UnifiedContainer.class.php: fetched collection now
	excluded from serialization.

2007-02-19	Konstantin V. Arkhipov

	* main/Containers/UnifiedContainer.class.php: unsaved objects are not
	tracked by importList() now.

2007-01-22	Konstantin V. Arkhipov

	* main/DAOs/VoodooDaoWorker.class.php: segments are now created with
	0660 permission, instead of 0600.

2007-01-11	Konstantin V. Arkhipov

	* core/DB/ImaginaryDialect.class.php: missing toString added to
	fullTextSearch()/fullTextRank().

2007-01-08	Konstantin V. Arkhipov

	* 0.4.11 released.

2006-12-29	Konstantin V. Arkhipov

	* core/Cache/WatermarkedPeer.class.php: fix for possible cache
	corruption backported from trunk.

2006-12-20	Konstantin V. Arkhipov

	* main/Flow/RedirectView.class.php: now skips arrays and objects in
	query string generation.

2006-11-06	Konstantin V. Arkhipov
